--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -242,6 +242,7 @@ We note that while forming the union of all altered, newly added service and new
 
 The single-service accumulation function, $\accone$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
 \begin{equation}
+  \label{eq:operandtuple}
   \operandtuple \equiv \tuple{
     \isa{\ot¬packagehash}{\hash},
     \isa{\ot¬segroot}{\hash},
