--- a/text/beefy.tex
+++ b/text/beefy.tex
@@ -4,6 +4,6 @@ For each finalized block $\block$ which a validator imports, said validator shal
 
 Formally, let $\beefycommitment{v}$ be the signed commitment of validator index $v$ which will be published:
 \begin{align}\label{eq:beefysignedcommitment}
-  \beefycommitment{v} &\equiv \signdata{\activeset'\sub{v}}{\mathsf{X}_B \concat \text{last}(\recenthistory)_\rh¬accoutlogsuperpeak}\\
+  \beefycommitment{v} &\equiv \blssigndata{\activeset'\sub{v}}{\mathsf{X}_B \concat \text{last}(\recenthistory)_\rh¬accoutlogsuperpeak}\\
   \mathsf{X}_B &= \token{\$jam\_beefy}
 \end{align}
