--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -207,7 +207,7 @@ A block $\block$ is serialized as a tuple of its elements in regular order, as i
     \encode[2]{\asX_\as¬segcount}
   }
   \\
-  \encode{\wdX \in \mathbb{L}} &\equiv \encode{
+  \encode{\wdX \in \workdigest} &\equiv \encode{
     \encode[4]{\wdX_\wd¬service},
     \wdX_\wd¬codehash,
     \wdX_\wd¬payloadhash,
