--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -124,7 +124,7 @@ We limit the sums of each of the two gas limits to be at most the maximum gas al
 Given the result $\wd¬result$ and gas used $\wd¬gasused$ of some work-item, we define the item-to-digest function $\itemtodigest$ as:
 \begin{equation}
   \itemtodigest\colon\abracegroup{
-    \tuple{\workitem, \blob \cup \workerror, \gas} &\to \mathbb{L}\\
+    \tuple{\workitem, \blob \cup \workerror, \gas} &\to \workdigest\\
     \tup{\tup{\begin{aligned}
       &\¬service, \¬codehash, \¬payload,\\
       &\wi¬accgaslimit, \¬exportcount, \wi¬importsegments, \wi¬extrinsics
