--- a/text/overview.tex
+++ b/text/overview.tex
@@ -164,7 +164,7 @@ The \textsc{pvm} is fully defined in appendix \ref{sec:virtualmachine}, but for 
 
 We refer to the time-proportional computational steps as \emph{gas} (much like in the \emph{YP}) and limit it to a 64-bit quantity. We may use either $\gas$ or $\signedgas$ to bound it, the first as a prior argument since it is known to be positive, the latter as a result where a negative value indicates an attempt to execute beyond the gas limit. Within the context of the \textsc{pvm}, $\gascounter \in \gas$ is typically used to denote gas.
 \begin{equation}\label{eq:gasregentry}
-  \signedgas \equiv \mathbb{Z}_{-2^{63}\dots2^{63}}\ ,\quad
+  \signedgas \equiv \Z_{-2^{63}\dots2^{63}}\ ,\quad
   \gas \equiv \Nbits{64}\ ,\quad
   \pvmreg \equiv \Nbits{64}
 \end{equation}
