--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -138,9 +138,9 @@ A block $\block$ is serialized as a tuple of its elements in regular order, as i
   \\
   \encodepreimages{\xtpreimages} &= \encode{
     \var{\sq{\build{
-      \tup{\xp¬service, \var{\xp¬data}}
+      \tup{\xp¬serviceindex, \var{\xp¬data}}
     }{
-      \tup{\xp¬service, \xp¬data} \orderedin \xtpreimages}
+      \tup{\xp¬serviceindex, \xp¬data} \orderedin \xtpreimages}
     }}}
   \\
   \encodeguarantees{\xtguarantees} &= \encode{
@@ -208,7 +208,7 @@ A block $\block$ is serialized as a tuple of its elements in regular order, as i
   }
   \\
   \encode{\wdX \in \workdigest} &\equiv \encode{
-    \encode[4]{\wdX_\wd¬service},
+    \encode[4]{\wdX_\wd¬serviceindex},
     \wdX_\wd¬codehash,
     \wdX_\wd¬payloadhash,
     \encode[8]{\wdX_\wd¬gaslimit},
@@ -243,7 +243,7 @@ A block $\block$ is serialized as a tuple of its elements in regular order, as i
   \\
   % TODO: \encode[4]{i} should be just \encode{i}, but we should wait for this to be written.
   \encode{\wiX \in \workitem} &\equiv \encode{
-    \encode[4]{\wiX_\wi¬service},
+    \encode[4]{\wiX_\wi¬serviceindex},
     \wiX_\wi¬codehash,
     \encode[8]{\wiX_\wi¬refgaslimit},
     \encode[8]{\wiX_\wi¬accgaslimit},
@@ -259,7 +259,7 @@ A block $\block$ is serialized as a tuple of its elements in regular order, as i
   \\
   \encode{\stX \in \safroleticket} &\equiv \encode{
     \stX_\st¬id,
-    \stX_\st¬entry
+    \stX_\st¬entryindex
   }
   \\
   \encode{\dxX \in \defxfer} &\equiv \encode{
