--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -71,10 +71,10 @@ We begin by defining a \emph{work-package}, of set $\workpackage$, and its const
   }
 \end{equation}
 
-A work item includes: $\wi¬service$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $\wi¬codehash$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $\wi¬payload$, gas limits for Refinement and Accumulation $\wi¬refgaslimit$ \& $\wi¬accgaslimit$, and the three elements of its manifest, a sequence of imported data segments $\wi¬importsegments$ which identify a prior exported segment through an index and the identity of an exporting work-package, $\wi¬extrinsics$, a sequence of blob hashes and lengths to be introduced in this block (and which we assume the validator knows) and $\wi¬exportcount$ the number of data segments exported by this work item.
+A work item includes: $\wi¬serviceindex$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $\wi¬codehash$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $\wi¬payload$, gas limits for Refinement and Accumulation $\wi¬refgaslimit$ \& $\wi¬accgaslimit$, and the three elements of its manifest, a sequence of imported data segments $\wi¬importsegments$ which identify a prior exported segment through an index and the identity of an exporting work-package, $\wi¬extrinsics$, a sequence of blob hashes and lengths to be introduced in this block (and which we assume the validator knows) and $\wi¬exportcount$ the number of data segments exported by this work item.
 \begin{equation}\label{eq:workitem}
   \workitem \equiv \tuple{\begin{aligned}
-    &\isa{\wi¬service}{\serviceid},
+    &\isa{\wi¬serviceindex}{\serviceid},
     \isa{\wi¬codehash}{\hash},
     \isa{\wi¬payload}{\blob},
     \isa{\wi¬refgaslimit}{\gas},
@@ -126,11 +126,11 @@ Given the result $\wd¬result$ and gas used $\wd¬gasused$ of some work-item, we
   \itemtodigest\colon\abracegroup{
     \tuple{\workitem, \blob \cup \workerror, \gas} &\to \workdigest\\
     \tup{\tup{\begin{aligned}
-      &\¬service, \¬codehash, \¬payload,\\
+      &\¬serviceindex, \¬codehash, \¬payload,\\
       &\wi¬accgaslimit, \¬exportcount, \wi¬importsegments, \wi¬extrinsics
     \end{aligned}
     }, \wd¬result, \wd¬gasused} &\mapsto \tup{\begin{aligned}
-      &\wd¬service,\,
+      &\wd¬serviceindex,\,
       \wd¬codehash,\,
       \is{\wd¬payloadhash}{\blake{\¬payload}},\,
       \is{\wd¬gaslimit}{\wi¬accgaslimit},\,
@@ -166,8 +166,8 @@ We define the paged-proofs function $\pagedproofs$ which accepts a series of exp
     \sequence{\segment} \to \,&\sequence{\segment} \\
     \mathbf{s} \mapsto \,&\sq{\build{
       \zeropad{l}{\encode{
-        \var{\fnmerklejustsubpath{6}{\mathbf{s}, i}},
-        \var{\fnmerklesubtreepage{6}{\mathbf{s}, i}}
+        \var{\merklejustsubpath{6}{\mathbf{s}, i}},
+        \var{\merklesubtreepage{6}{\mathbf{s}, i}}
       }}
     }{
       i \orderedin \Nmax{\ceil{\nicefrac{\len{\mathbf{s}}}{64}}}
@@ -210,7 +210,7 @@ Where:
       j, \wpX, \mathbf{o}, \sq{\build{\importsegmentdata(w)}{w \orderedin \wpX_\wp¬workitems}}, \ell
     )}\\
     \multicolumn{2}{l}{\also h = \blake{\wpX}\,,\; \local¬theitem = \wpX_\wp¬workitems\subb{j}\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems\subb{k}_\wi¬exportcount}\\
-    \multicolumn{2}{l}{\also z = \len{\mathbf{o}} + \sum_{k < j, \tup{r \in \blob, \dots} = I(p, k)} \len{r}}
+    \multicolumn{2}{l}{\also z = \len{\mathbf{o}} + \sum_{k < j, \tup{r \in \blob, \dots} = I(\wpX, k)} \len{r}}
   \end{cases}
 \end{align*}
 
