--- a/preamble.tex
+++ b/preamble.tex
@@ -324,6 +324,7 @@
 % TODO: Use non-prefixed items for common fields:
 \newcommand*{\¬authorizer}{a} % O/L ¬accgaslimit
 \newcommand*{\¬authtrace}{\mathbf{t}}
+\newcommand*{\¬bundlelen}{l}
 \newcommand*{\¬codehash}{c} % O/L core
 \newcommand*{\¬context}{\mathbf{c}}
 \newcommand*{\¬core}{c} % O/L codehash
@@ -438,7 +439,7 @@
 \newcommand*{\asX}{\mathbf{x}}
 % TODO: Is it \as¬packagehash or \as¬bundlehash? Unclear whether this was changed to the hash of the work-package bundle or still the hash of the work-package itself.
 \newcommand*{\as¬packagehash}{\¬packagehash}
-\newcommand*{\as¬bundlelen}{l}
+\newcommand*{\as¬bundlelen}{\¬bundlelen}
 \newcommand*{\as¬erasureroot}{u}
 \newcommand*{\as¬segroot}{\¬segroot}
 \newcommand*{\as¬segcount}{n}
@@ -451,7 +452,6 @@
 \newcommand*{\wc¬lookupanchorhash}{l}
 \newcommand*{\wc¬lookupanchortime}{t}
 \newcommand*{\wc¬prerequisites}{\mathbf{p}}
-% TODO: Move \mathbf{p} from here into the \workreport and work-package - it's really not part of the context.
 
 \newcommand*{\serviceaccount}{\mathbb{A}}
 \newcommand*{\saX}{\mathbf{a}}
@@ -511,7 +511,7 @@
 \newcommand*{\cs¬xtcount}{\¬xtcount}
 \newcommand*{\cs¬xtsize}{\¬xtsize}
 \newcommand*{\cs¬exportcount}{\¬exportcount}
-\newcommand*{\cs¬bundlelen}{b} % TODO: Rename to l and dedupe
+\newcommand*{\cs¬bundlelen}{\¬bundlelen}
 \newcommand*{\cs¬gasused}{\¬gasused}
 
 % Fields of service statistics (\servicestats)
